# b_splines_intro

./: .gitignore  CMakeLists.txt  main.cpp  nfunc.py
VisualStudia/: b_splines_intro.sln  b_splines_intro.vcxproj  b_splines_intro.vcxproj.filters
